--- a/blueprint/web/index.html
+++ b/blueprint/web/index.html
@@ -15,8 +15,6 @@
 <title>The blossoming principle</title>
 <link rel="stylesheet" href="styles/theme-white.css" />
 <link rel="stylesheet" href="styles/amsthm.css" />
-<link rel="stylesheet" href="styles/showmore.css" />
-<link rel="stylesheet" href="styles/blueprint.css" />
 <link rel="stylesheet" href="styles/extra_styles.css" />
 </head>
 
@@ -35,8 +33,92 @@
 <span class="author">Matija Steblaj</span>
 </p>
 </div>
-<h1 id="a0000000002">0.1 Test</h1>
-<p> Tralala </p>
+<h1 id="a0000000002">1 Polynomial maps between affine spaces</h1>
+<div class="definition_thmwrapper theorem-style-definition" id="a0000000003">
+  <div class="definition_thmheading">
+    <span class="definition_thmcaption">
+    Definition
+    </span>
+    <span class="definition_thmlabel">1</span>
+  </div>
+  <div class="definition_thmcontent">
+  <p>Polynomial map for given affine space basis. </p>
+
+  </div>
+</div>
+<div class="theorem_thmwrapper theorem-style-plain" id="a0000000004">
+  <div class="theorem_thmheading">
+    <span class="theorem_thmcaption">
+    Theorem
+    </span>
+    <span class="theorem_thmlabel">2</span>
+  </div>
+  <div class="theorem_thmcontent">
+  <p>Polynomial map definition is independent on chosen affine space basis. </p>
+
+  </div>
+</div>
+<div class="definition_thmwrapper theorem-style-definition" id="a0000000005">
+  <div class="definition_thmheading">
+    <span class="definition_thmcaption">
+    Definition
+    </span>
+    <span class="definition_thmlabel">3</span>
+  </div>
+  <div class="definition_thmcontent">
+  <p>Polynomial map (for any basis) </p>
+
+  </div>
+</div>
+<div class="theorem_thmwrapper theorem-style-plain" id="a0000000006">
+  <div class="theorem_thmheading">
+    <span class="theorem_thmcaption">
+    Theorem
+    </span>
+    <span class="theorem_thmlabel">4</span>
+  </div>
+  <div class="theorem_thmcontent">
+  <p>Affine maps are polynomial of degree 1. </p>
+
+  </div>
+</div>
+<h1 id="a0000000007">2 Blossoming principle</h1>
+<div class="definition_thmwrapper theorem-style-definition" id="a0000000008">
+  <div class="definition_thmheading">
+    <span class="definition_thmcaption">
+    Definition
+    </span>
+    <span class="definition_thmlabel">5</span>
+  </div>
+  <div class="definition_thmcontent">
+  <p>Multiaffine map </p>
+
+  </div>
+</div>
+<div class="definition_thmwrapper theorem-style-definition" id="a0000000009">
+  <div class="definition_thmheading">
+    <span class="definition_thmcaption">
+    Definition
+    </span>
+    <span class="definition_thmlabel">6</span>
+  </div>
+  <div class="definition_thmcontent">
+  <p>Symmetric map </p>
+
+  </div>
+</div>
+<div class="theorem_thmwrapper theorem-style-plain" id="a0000000010">
+  <div class="theorem_thmheading">
+    <span class="theorem_thmcaption">
+    Theorem
+    </span>
+    <span class="theorem_thmlabel">7</span>
+  </div>
+  <div class="theorem_thmcontent">
+  <p>Blossoming principle </p>
+
+  </div>
+</div>
 
 </div> <!--main-text -->
 </div> <!-- content-wrapper -->
@@ -44,16 +126,10 @@
 </div> <!-- wrapper -->
 
 <nav class="prev_up_next">
-  <svg  id="showmore-minus" class="icon icon-eye-minus showmore"><use xlink:href="symbol-defs.svg#icon-eye-minus"></use></svg>
-
-  <svg  id="showmore-plus" class="icon icon-eye-plus showmore"><use xlink:href="symbol-defs.svg#icon-eye-plus"></use></svg>
-
 </nav>
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/plastex.js"></script>
 <script type="text/javascript" src="js/svgxuse.js"></script>
-<script type="text/javascript" src="js/js.cookie.min.js"></script>
-<script type="text/javascript" src="js/showmore.js"></script>
 </body>
 </html>
